--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.4",
     "@react-navigation/drawer": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
     "expo": "^1.0.0",
@@ -30,6 +31,9 @@
     "react-native-swipeable-item": "^1.5.7",
     "react-native-unimodules": "^0.12.0",
     "react-native-web": "^0.17.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
