--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start --reset-cache"
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-navigation/drawer": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
+    "@rescript-react-native/cameraroll": "^4.0.3",
     "expo": "^1.0.0",
     "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.0.4",
@@ -23,6 +24,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-photoeditorsdk": "^2.10.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
