--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-native start --reset-cache"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-navigation/drawer": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
@@ -35,6 +36,7 @@
     "react-native-web": "^0.17.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
   },
