--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
       android:allowBackup="false"
       android:requestLegacyExternalStorage="true"
       android:theme="@style/AppTheme">
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyArpbwqR1Ej7rYcmNj_PIrmGNnDqk163V4"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
