--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "^0.4.2",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.64.2",
@@ -39,7 +40,8 @@
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
