--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-swipeable-item": "^1.5.7",
     "react-native-unimodules": "^0.12.0",
     "react-native-web": "^0.17.1",
+    "react-native-webview": "^11.13.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
