--- a/ios/CameraProject/Info.plist
+++ b/ios/CameraProject/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSFaceIDUsageDescription</key>
+    <string>CameraProject requires FaceID access to allows you quick and secure access.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>We need your permission to use your camera</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
