--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/cameraroll": "^4.0.4",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@react-navigation/drawer": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
     "@rescript-react-native/cameraroll": "^4.0.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-bc4e75112-20210815",
     "expo": "^1.0.0",
     "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.0.4",
@@ -24,6 +27,7 @@
     "react-native-circular-progress": "^1.3.7",
     "react-native-draggable-flatlist": "^2.6.2",
     "react-native-elements": "^3.4.2",
+    "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "^0.28.0",
@@ -45,7 +49,8 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "eslint": "^7.32.0"
   },
   "private": true
 }
