--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swipeable-item": "^1.5.7",
