--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,14 +4,10 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '10.0'
 
 target 'CameraProject' do
+pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
     rn_maps_path = '../node_modules/react-native-maps'
     pod 'react-native-google-maps', :path => rn_maps_path
   config = use_native_modules!
-  pod 'RNFS', :path => '../node_modules/react-native-fs'
-
-
-  pod 'react-native-camera', path: '../node_modules/react-native-camera'
-
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
