--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -248,7 +248,9 @@ dependencies {
     }
 
         implementation project(':react-native-fs')
+        implementation 'com.google.firebase:firebase-analytics:17.3.0'
 }
+apply plugin: 'com.google.gms.google-services'
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
