--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.1.0")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10")
         classpath('ly.img.android.sdk:plugin:8.3.1')
+        classpath('com.google.gms:google-services:4.3.3')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -42,3 +43,18 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+
+// project.ext {
+//   set('react-native', [
+//     versions: [
+//       // Overriding Build/Android SDK Versions
+//
+//
+//       // Overriding Library SDK Versions
+//       firebase: [
+//         // Override Firebase SDK Version
+//         bom           : "28.3.1"
+//       ]
+//     ],
+//   ])
+// }
