--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@react-native-community/push-notification-ios": "^1.9.0",
     "@react-navigation/drawer": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
     "@rescript-react-native/cameraroll": "^4.0.3",
@@ -33,6 +34,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "^0.28.0",
     "react-native-photoeditorsdk": "^2.10.1",
+    "react-native-push-notification": "^7.4.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
