--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,7 +11,7 @@ pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => false
+    :hermes_enabled => true
   )
 
   target 'CameraProjectTests' do
