--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "^0.4.2",
     "formik": "^2.2.9",
+    "hermes-profile-transformer": "^0.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.64.2",
