--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "16.13.1",
     "react-native": "^0.64.2",
     "react-native-camera": "^4.0.0",
+    "react-native-camera-hooks": "^0.5.1",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circular-progress": "^1.3.7",
     "react-native-draggable-flatlist": "^2.6.2",
