--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '10.0'
 
 target 'CameraProject' do
+pod 'RNFS', :path => '../node_modules/react-native-fs'
 pod 'RNCharts', :path => '../node_modules/react-native-charts-wrapper'
     rn_maps_path = '../node_modules/react-native-maps'
     pod 'react-native-google-maps', :path => rn_maps_path
