--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-signature-canvas": "^4.3.0",
+    "react-native-signature-capture": "^0.4.12",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
