--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-i18n": "^2.0.15",
     "react-native-maps": "^0.28.0",
+    "react-native-modal": "^13.0.0",
     "react-native-photoeditorsdk": "^2.10.1",
     "react-native-push-notification": "^7.4.0",
     "react-native-reanimated": "~2.2.0",
