--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/cameraroll": "^4.0.4",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/eslint-config": "^3.0.0",
     "@react-native-community/push-notification-ios": "^1.9.0",
     "@react-navigation/drawer": "^6.0.0",
@@ -37,6 +38,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-maps": "^0.28.0",
     "react-native-modal": "^13.0.0",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-photoeditorsdk": "^2.10.1",
     "react-native-push-notification": "^7.4.0",
     "react-native-reanimated": "~2.2.0",
